--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,10 +2,10 @@
   "name": "@acme/expo",
   "version": "0.1.0",
   "private": true,
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start",
+    "dev": "expo start --android",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "android": "expo run:android",
@@ -25,21 +25,24 @@
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
+    "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "nativewind": "~4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-native": "~0.73.6",
     "react-native-css-interop": "~0.0.34",
     "react-native-gesture-handler": "~2.14.1",
-    "react-native-reanimated": "~3.8.1",
+    "react-native-reanimated": "~3.6",
     "react-native-safe-area-context": "~4.8.2",
     "react-native-screens": "~3.29.0",
     "superjson": "2.2.1"
   },
   "devDependencies": {
     "@acme/api": "*",
+    "@acme/validators": "*",
     "@acme/eslint-config": "*",
     "@acme/prettier-config": "*",
     "@acme/tailwind-config": "*",
