--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,11 @@
     "@acme/auth": "*",
     "@acme/db": "*",
     "@acme/validators": "*",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@trpc/server": "11.0.0-next.320",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "superjson": "2.2.1",
     "zod": "^3.22.4"
   },
@@ -30,6 +34,7 @@
     "@acme/eslint-config": "*",
     "@acme/prettier-config": "*",
     "@acme/tsconfig": "*",
+    "@types/bcrypt": "^5.0.2",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3"
